Some corrections